Improve scaling for small devices fix: Allow grid to shrink on smaller displays fix: Take into account unusable display space on mobile devices (set vh manually) fix: Reduce display height on Safari mobile screens with secret -webkit-fill-available feature

--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
   --color-correct: var(--color-ukraine-blue);
 
   --header-height: 50px;
-  --max-board-width: 500px;
+  --max-board-width: 318px;
 }
 
 body {
@@ -29,7 +29,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  min-height: 100vh;
+  min-height: 100vh; /* TODO: apply calculated height */
+  min-height: -webkit-fill-available; /* Mobile viewport bug fix */
   margin: 0;
   padding: 0em;
   padding-top: .1em;
@@ -149,9 +150,10 @@ header .btn-menu {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100vw;
-  height: calc(100vh - var(--header-height));
+  height: calc(100vh - var(--header-height)); /* TODO: apply calculated height */
+  height: calc(var(--vh, 1vh) * 100 - var(--header-height));
   overflow: hidden;
   margin: 0;
 }
@@ -161,37 +163,47 @@ header .btn-menu {
 .board-container {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  /* flex-grow: 1; */
   align-items: center;
   justify-content: center;
   width: 100%;
   max-width: var(--max-board-width);
+  height: calc(100% - var(--header-height));
+  /* max-height: var(--max-board-width); */
+  max-height: 100%;
 }
 .gameboard {
   display: grid;
   justify-content: center;
   align-content: center;
-  flex-grow: 1;
-  grid-template-columns: repeat(5, 4em);
-  grid-template-rows: repeat(6, 4em);
+  flex-grow: 1; /* Grow lines into boxes */
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
   gap: .25em;
-  margin: auto;
+  grid-gap: .25em; /* for iOS */
+  margin: 0 auto;
   margin-bottom: 1em;
+  width: 100%;
+  padding: 10px;
+  max-height: var(--max-board-width);
 }
 
 @media screen and (max-width: 500px) {
   .gameboard {
-    grid-template-columns: repeat(5, 1fr);
+    /* grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(6, 1fr);
     max-height: 90%;
-    max-width: 90%;
+    max-width: 90%; */
+    padding: 10px;
   }
 }
 
 .cell {
+  /* position: relative; - for potential pre-fill hack */
   display: flex;
   align-items: center;
   justify-content: center;
+  /* aspect-ratio: 1 / 1; experimental property: don't use */
 
   background-color: var(--color-background);
   border: .05em solid hsl(240, 2%, 23%);
@@ -206,19 +218,27 @@ header .btn-menu {
 
 @media screen and (max-height: 700px) {
   /* TODO: Keep the tiles square */
-  .gameboard {
+  /* .gameboard {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(6, 1fr);
     max-height: 90%;
     max-width: 90%;
-  }
+  } */
 }
 @media screen and (max-height: 600px) {
+  /* Tiles may be compressed vertically when shorter than this  */
   .cell {
     font-size: 1em;
     line-height: 1em;
   }
-
+  .board-container {
+    position: relative;
+    height: 100%;
+  }
+  .gameboard {
+    flex-grow: 1;
+    -webkit-flex-grow: 1;
+  }
 }
 
 .cell[data-state="active"] {
@@ -388,7 +408,7 @@ header .btn-menu {
   margin-right: 0;
 }
 
-@media (max-width: 780px) {
+@media screen and (max-width: 780px) {
   .btn-menu {
     display: flex;
     justify-content: center;
@@ -398,9 +418,7 @@ header .btn-menu {
     height: 4em;
   }  
   .gameboard {
-    /* background-color: green; */
-    /* FIXME: Not effective */
-    width: 100vw;
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
@@ -414,7 +432,7 @@ header .btn-menu {
 /* ------- Alert Box ------- */
 .alert-container {
   position: fixed;
-  top: 10vh;
+  top: 10vh; /* TODO: apply calculated height? */
   left: 50vw;
   transform: translateX(-50%);
   z-index: 10;
@@ -449,7 +467,8 @@ header .btn-menu {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100vh; /* TODO: apply calculated height? */
+  height: -webkit-fill-available;
   background-color: var(--color-background);
   z-index: 10;
   display: none;
